--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
     <footer>
         <p>© 2024 Mijn Portfolio. Alle rechten voorbehouden.</p>
     </footer>
-
-    <script src="script.js"></script>
+<iframe
+  src="https://app.speckle.systems/projects/67ce670a85/models/2b6ec7f3e2#embed=%7B%22isEnabled%22%3Atrue%7D>"
+  width="600"
+  height="400"
+  frameborder="0">
+</iframe>
+    
 </body>
 </html>
