--- a/Project 1.html
+++ b/Project 1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <nav class="navbar">
-            <div class="logo"><a href= "Portfolio.html">Mijn Portfolio</a></div>
+            <div class="logo"><a href= "index.html">Mijn Portfolio</a></div>
             <ul class="nav-links">
                 <li><a href="#about">Over Mij</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
