--- a/Project 1.html
+++ b/Project 1.html
@@ -15,7 +15,7 @@
                 <a href="index.html">
                 <img src="Portfolio.photo/Mijn%20Portfolio%20logo.png" ></a></div>
             <ul class="nav-links">
-                <li><a id=overpr href="index.html#about">Over Mij</a></li>
+                <li><a id="overpr" href="index.html#about">Over Mij</a></li>
                 <li><a href="index.html#portfolio">Portfolio</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><button id="engbutton" onclick="translateToEnglish()">English</button></li>
@@ -36,7 +36,7 @@
 </div>
     
     <div class="grid item uitleg">
-            <img id=instrnl src="Portfolio.photo/Instructies.png" 
+            <img id="instrnl" src="Portfolio.photo/Instructies.png" 
                  alt="Uitleg" width="350" height="400" >
     </div>  
     </div>   
@@ -45,8 +45,8 @@
 
     
    <div class="text-block">
-        <h2 id=titell>Levensloopbestendig wonen</h2>
-        <p id=inleidingl>Welkom bij mijn project over levensloopbestendig wonen! Dit ontwerp richt zich op het creëren van een woning 
+        <h2 id="titell">Levensloopbestendig wonen</h2>
+        <p id="inleidingl">Welkom bij mijn project over levensloopbestendig wonen! Dit ontwerp richt zich op het creëren van een woning 
 die geschikt is voor alle levensfasen, met een sterke focus op functionaliteit, comfort en duurzaamheid. 
 Het project is geïnspireerd door de groeiende vraag naar woningen die ouderen de mogelijkheid bieden om 
 zelfstandig te blijven wonen, zelfs als hun behoeften veranderen.
@@ -64,7 +64,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup1" class="overlay">
         <div class="popup"> 
-            <h2 id=plat >Plattegrond</h2> 
+            <h2 id="plat" >Plattegrond</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0024.jpg" alt="Image 1"/>
@@ -85,7 +85,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup2" class="overlay">
         <div class="popup"> 
-            <h2 id= 2punt >2 puntsperspectief</h2> 
+            <h2 id= "2punt" >2 puntsperspectief</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0025.jpg"  alt="Image 2"/>
@@ -104,7 +104,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup3" class="overlay">
         <div class="popup"> 
-            <h2 id= revit>Revit</h2> 
+            <h2 id= "revit">Revit</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0052.jpg"  alt="Image 3"/>
@@ -123,7 +123,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup4" class="overlay">
         <div class="popup"> 
-            <h2 id=constr >Constructie dak detail</h2> 
+            <h2 id="constr" >Constructie dak detail</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0033.jpg"  alt="Image 4"/>
@@ -142,7 +142,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup5" class="overlay">
         <div class="popup"> 
-            <h2 id=confun >Constructie fundering/muur detail</h2> 
+            <h2 id="confun" >Constructie fundering/muur detail</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0034.jpg"  alt="Image 5"/>
@@ -161,7 +161,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup6" class="overlay">
         <div class="popup"> 
-            <h2 id= bouwkdak >Bouwkundige dak detail</h2> 
+            <h2 id= "bouwkdak" >Bouwkundige dak detail</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0046.jpg"  alt="Image 6"/>
@@ -180,7 +180,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup7" class="overlay">
         <div class="popup"> 
-            <h2 id=bouwkfun >Bouwkundige fundering/muur detail</h2> 
+            <h2 id="bouwkfun" >Bouwkundige fundering/muur detail</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0047.jpg"  alt="Image 2"/>
