--- a/Project 1.html
+++ b/Project 1.html
@@ -85,7 +85,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
     </div>
     <div id="popup2" class="overlay">
         <div class="popup"> 
-            <h2 id= "2punt" >2 puntsperspectief</h2> 
+            <h2 id= "2punt" > twee puntsperspectief</h2> 
             <a class="close" href="#">&times;</a>
             <div class="content">
                 <img src="Portfolio.photo/0025.jpg"  alt="Image 2"/>
