--- a/Project 1.html
+++ b/Project 1.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Levensloopbestendig wonen</title>
     <link rel="stylesheet" href="Project%201.css">
+ <!-- Voeg de juiste paden toe voor de favicon -->
+    <link rel="icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" sizes="180x180">
+    <link rel="icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" sizes="16x16" type="image/png">
 </head>
 <body>
     
