--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title id= titelp>Mijn Portfolio</title>
     <link rel="stylesheet" href="Portfolio.css">
     <script src="Portfolio.js"></script>
+ <!-- Voeg de juiste paden toe voor de favicon -->
+    <link rel="icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" sizes="180x180">
+    <link rel="icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="Portfolio.photo/Mijn%20Portfolio%20logo.png" sizes="16x16" type="image/png">
 </head>
 <body>
     <div id="content">
