--- a/Project 1.html
+++ b/Project 1.html
@@ -48,7 +48,7 @@ Bekijk hieronder enkele afbeeldingen van mijn proces, schetsen, en technische ui
 </div>
     
     <div class="grid item uitleg">
-            <img id=instrnl src="Portfolio.photo/Instructies.png" 
+            <img id=instrnl src="Portfolio.photo/Instructies2.png" 
                  alt="Uitleg" width="350" height="400" >
     </div>  
     </div>   
