--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <div class="about-text">
             <h2 id=overh2 >Over Mij</h2>
             <p id=overp>
-                Ik ben een bouwkundig student van hogeschool Rotterdam en zit nu in mijn tweede jaar. Ik ben gespecialiseerd in architectuur, met ervaring in
-                AutoCAD, Revit, en Twinmotion. Mijn passie ligt in een creatieve, innovatieve en duurzame ontwerpen te maken.
+                Mijn naam is Faith Bundu en ik ben een bouwkundig student gespecialiseerd in architectuur, met ervaring in AutoCAD, Revit, en Twinmotion. Mijn passie ligt in het maken van creatieve, innovatieve en duurzame ontwerpen.
             </p>
         </div>
     </div>
