--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo" >
-                <a href="Portfolio.html">
+                <a href="index.html">
                 <img src="Portfolio.photo/Mijn%20Portfolio%20logo.png"></a>
                 <div id="thuis" class="logo-text">Thuis</div>
             </div> 
