--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a id="cvlogoLink" href="Portfolio.photo/CV-pages-1.pdf" target="_blank">
             <img id="cvlogo" src="Portfolio.photo/CVlogo.png">
             </a>
-            <a href="www.linkedin.com/in/faith-bundu-229988341" target="_blank"><img id="llogo" src="Portfolio.photo/linkedin.png"></a>
+            <a href="https://www.linkedin.com/in/faith-bundu-229988341" target="_blank"><img id="llogo" src="Portfolio.photo/linkedin.png"></a>
         </div>
     </div>
 </section>
