--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="about-text">
             <h2 id=overh2 >Over Mij</h2>
             <p id=overp>
-                Mijn naam is Faith Bundu en ik ben een tweedejaars bouwkundestudent aan de Hogeschool Rotterdam. Ik ben gespecialiseerd in architectuur, met ervaring in AutoCAD, Revit, en Twinmotion. Mijn passie ligt in het maken van creatieve, innovatieve en duurzame ontwerpen. 
+                Mijn naam is Faith Bundu en ik ben een tweedejaars bouwkundestudent aan de Hogeschool Rotterdam. Ik ben gespecialiseerd in architectuur met ervaring in Adobe Suite, Revit, en Twinmotion. Mijn passie ligt in het maken van creatieve, innovatieve en duurzame ontwerpen. 
             </p>
               </div>
     </div>
