--- a/Project 2.html
+++ b/Project 2.html
@@ -44,9 +44,8 @@
         <p id=inleidingl>
 Welkom bij mijn project waar ik gewerkt heb aan een duurzame gevel voor de Basisschool: de Kameleon! Dit ontwerp richt zich op het creëren van een duurzame 
 en toekomstbestendige leeromgeving, met een sterke focus op circulariteit, klimaatadaptatie en natuurinclusiviteit. 
-<br>
 Dit project heeft me veel geleerd over duurzaam bouwen en het belang van natuur in de stad. 
-Hieronder zijn de factsheet van mijn project waar je mijn proces, schetsen en uitwerkingen kunt zien. </p>
+<br> Hieronder zijn de factsheet van mijn project waar je mijn proces, schetsen en uitwerkingen kunt zien. </p>
     </div>
     
   </header>
