--- a/Project 2.html
+++ b/Project 2.html
@@ -28,9 +28,10 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-btn">Portfolio</a>
                     <div class="dropdown-content">
+                        <a id="skipiste2" href="Project%204.html">Tussenstation skipiste</a>
+                        <a id="pakhuis2" href="Project%203.html">Pakhuis woning</a>
                         <a id="levenh4" href="Project%201.html">Levensloopbestendig wonen</a>
                         <a id="circb2" href="Project%202.html">Circulaire bouwsteen</a>
-                        <a id="pakhuis2" href="Project%203.html">Pakhuis woning</a>
                     </div>      
                 </li>
                 <li><a href="index.html#contact">Contact</a></li>
