--- a/Project 3.html
+++ b/Project 3.html
@@ -131,7 +131,8 @@ Hieronder zijn de posters van mijn project waar je mijn proces, schetsen en uitw
         <div class="popup"> 
             <a class="close" href="#">&times;</a>
             <div class="content">
-            <iframe src="https://www.youtube.com/embed/b72LFBGKS6w" title="Twinmotion video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"
+            <iframe src="https://www.youtube.com/embed/b72LFBGKS6w" title="Twinmotion video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen 
+loading="lazy"
   ...></iframe>
             </div>
              <!-- Navigatiepijlen -->
